# kumoworks

./: .gitignore  .travis.yml  LICENSE.txt  README.md  appveyor.yml
.github/: ISSUE_TEMPLATE.md
macOS/: BundleInfo.plist.in  macdeploy.sh  macinstaller.rb
macOS/English.lproj/: License.rtf
macOS/Japanese.lproj/: License.rtf
misc/: how_to_build_linux.md  how_to_build_macos.md  how_to_build_win.md
misc/ini/: cloudpreset.ini
misc/licenses/: LICENSE_ARHOSEK_SKYMODEL.txt
sources/: ArHosekSkyModel.cpp  CMakeLists.txt  KumoWorks.icns  KumoWorks.rc  KumoWorks_resources.qrc  RandomNumberGenerator.h  aboutpopup.cpp  aboutpopup.h  beautification.sh  cloud.cpp  cloud.h  cloudlayerview.cpp  cloudlayerview.h  cloudpresetcontrol.cpp  cloudpresetcontrol.h  colorgradientparam.h  main.cpp  mainwindow.cpp  mainwindow.h  mycontrol.cpp  mycontrol.h  myflowmanager.h  mygradientcontrol.cpp  mygradientcontrol.h  myparams.cpp  myparams.h  myrenderpopup.cpp  mytoolbar.cpp  mytoolbar.h  myviewer.cpp  myviewer.h  pathutils.cpp  pathutils.h  progressview.cpp  progressview.h  renderpopup.cpp  renderpopup.h  renderworkerthread.cpp  renderworkerthread.h  simplexnoise.cpp  (+6 more)
sources/loc/: KumoWorks_fr.qm  KumoWorks_ja.qm  KumoWorks_ru.qm
sources/translations/: KumoWorks_fr.ts  KumoWorks_ja.ts  KumoWorks_ru.ts
windows/: .gitignore  filelist.py  kw_setup.bat  setup.iss
